tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_object_type_must_be_known_in_method_call/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Object type is unknown in method call
  ┌─ src/main.nr:5:17
  │
5 │         let _ = bar.len();
  │                 --- Type must be known by this point to know which method to call
  │
  = Try adding a type annotation for the object type before this method call

Aborting due to 1 previous error
